[tool.poetry]
name = "distancer"
version = "0.1.0"
description = "THe program automate distance calculation process"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
screeninfo = "^0.8.1"
mss = "^9.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
